open photo gallery

--- a/realmDatabase/Base.lproj/Main.storyboard
+++ b/realmDatabase/Base.lproj/Main.storyboard
@@ -76,6 +76,74 @@
             </objects>
             <point key="canvasLocation" x="3539" y="126"/>
         </scene>
+        <!--Add New Photo View Controller-->
+        <scene sceneID="NtY-Qr-Y0q">
+            <objects>
+                <viewController storyboardIdentifier="addPhotoVC" id="sYx-0y-i4P" customClass="AddNewPhotoViewController" customModule="realmDatabase" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YOz-4L-iDw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nazwa pliku" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAq-gj-aEQ">
+                                <rect key="frame" x="14" y="81" width="92" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FGW-8Q-52z">
+                                <rect key="frame" x="116" y="77" width="249" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dge-Wh-i4r">
+                                <rect key="frame" x="10" y="124" width="84" height="30"/>
+                                <state key="normal" title="Wybierz plik"/>
+                                <connections>
+                                    <action selector="addPhotoButtonClick:" destination="sYx-0y-i4P" eventType="touchUpInside" id="GCo-sP-i2o"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yhX-JZ-3G3">
+                                <rect key="frame" x="114" y="129" width="251" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Simulator Screen Shot - iPhone 6 - 2018-08-22 at 12.01.22" translatesAutoresizingMaskIntoConstraints="NO" id="76b-GU-4Mh">
+                                <rect key="frame" x="59" y="245" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ZAq-gj-aEQ" firstAttribute="leading" secondItem="EY9-6G-Ww8" secondAttribute="leading" constant="14" id="0PY-aX-rfo"/>
+                            <constraint firstItem="ZAq-gj-aEQ" firstAttribute="top" secondItem="EY9-6G-Ww8" secondAttribute="top" constant="61" id="D98-No-ubB"/>
+                            <constraint firstItem="Dge-Wh-i4r" firstAttribute="leading" secondItem="EY9-6G-Ww8" secondAttribute="leading" constant="10" id="F1V-FG-3H6"/>
+                            <constraint firstItem="yhX-JZ-3G3" firstAttribute="leading" secondItem="Dge-Wh-i4r" secondAttribute="trailing" constant="20" id="Gcb-y5-6s2"/>
+                            <constraint firstItem="76b-GU-4Mh" firstAttribute="top" secondItem="Dge-Wh-i4r" secondAttribute="bottom" constant="91" id="Hft-b4-hVK"/>
+                            <constraint firstItem="76b-GU-4Mh" firstAttribute="leading" secondItem="EY9-6G-Ww8" secondAttribute="leading" constant="59" id="HxM-r8-nJy"/>
+                            <constraint firstItem="yhX-JZ-3G3" firstAttribute="top" secondItem="FGW-8Q-52z" secondAttribute="bottom" constant="22" id="O7d-lK-mIO"/>
+                            <constraint firstItem="EY9-6G-Ww8" firstAttribute="trailing" secondItem="yhX-JZ-3G3" secondAttribute="trailing" constant="10" id="RsH-ko-H8l"/>
+                            <constraint firstItem="FGW-8Q-52z" firstAttribute="top" secondItem="EY9-6G-Ww8" secondAttribute="top" constant="57" id="Z0G-NW-xb6"/>
+                            <constraint firstItem="EY9-6G-Ww8" firstAttribute="bottom" secondItem="76b-GU-4Mh" secondAttribute="bottom" constant="294" id="cMn-p9-pD0"/>
+                            <constraint firstItem="FGW-8Q-52z" firstAttribute="leading" secondItem="ZAq-gj-aEQ" secondAttribute="trailing" constant="10" id="fK4-wv-56W"/>
+                            <constraint firstItem="EY9-6G-Ww8" firstAttribute="trailing" secondItem="76b-GU-4Mh" secondAttribute="trailing" constant="76" id="ofd-mJ-CQg"/>
+                            <constraint firstItem="Dge-Wh-i4r" firstAttribute="top" secondItem="ZAq-gj-aEQ" secondAttribute="bottom" constant="22" id="vyM-f5-00R"/>
+                            <constraint firstItem="EY9-6G-Ww8" firstAttribute="trailing" secondItem="FGW-8Q-52z" secondAttribute="trailing" constant="10" id="wlf-zq-ovH"/>
+                            <constraint firstItem="EY9-6G-Ww8" firstAttribute="bottom" secondItem="Dge-Wh-i4r" secondAttribute="bottom" constant="513" id="yid-CS-MQH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="EY9-6G-Ww8"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="76b-GU-4Mh" id="YHs-Nn-XC6"/>
+                        <outlet property="nameLabel" destination="ZAq-gj-aEQ" id="EM5-KO-0ki"/>
+                        <outlet property="nameLabelTF" destination="FGW-8Q-52z" id="HTd-AA-AIk"/>
+                        <outlet property="newPhotoName" destination="yhX-JZ-3G3" id="i6p-82-gmC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QXN-fX-ic5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4194" y="122"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ac4-oL-3R2">
             <objects>
@@ -113,4 +181,7 @@
             <point key="canvasLocation" x="1756" y="117.39130434782609"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Simulator Screen Shot - iPhone 6 - 2018-08-22 at 12.01.22" width="750" height="1334"/>
+    </resources>
 </document>
