--- a/realmDatabase/Modules/Realm/Realm.storyboard
+++ b/realmDatabase/Modules/Realm/Realm.storyboard
@@ -17,7 +17,7 @@
                     <view key="view" contentMode="scaleToFill" id="S5m-MM-7cN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.1529411765" green="0.75294117650000003" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="ohp-aa-vxc"/>
                     </view>
                 </viewController>
